Towards Showing developer proficiencies
- more data model
- reformulated second use case test to call show and check viewmodel
- changed developer.pseudonym to developer.name